# dbxdebug

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/dbxdebug/: __init__.py  capture_io.py  cli.py  html.py  utils.py
