[project]
name = "dbxdebug"
version = "0.1.0"
description = "Client library and CLI for DOSBox-X remote debug protocols (GDB and QMP)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "lokkju" }
]
keywords = ["dosbox", "dosbox-x", "debugging", "gdb", "qmp", "emulator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Emulators",
]
dependencies = [
    "click>=8.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyright>=1.1",
]

[project.scripts]
dbxdebug = "dbxdebug.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbxdebug"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
